--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "nsiesicki-obsidian-password-vault",
+	"name": "Password Storage",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "This is a plugin created based on obsidian API and will enable people to save encrypted passwords in obsidian.",
+	"author": "nsiesicki",
+	"authorUrl": "https://github.com/nsiesicki",
+	"fundingUrl": "TBD",
 	"isDesktopOnly": false
 }
