--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"aes256": "^1.1.0",
+		"sqlite3": "^5.1.6"
 	}
 }
