--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
+		"@types/react": "^18.2.14",
+		"@types/react-dom": "^18.2.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
+		"aes256": "^1.1.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
 		"obsidian": "latest",
+		"sqlite3": "^5.1.6",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
 		"aes256": "^1.1.0",
+		"dotenv": "^16.3.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"sqlite3": "^5.1.6"
 	}
 }
