--- a/package.json
+++ b/package.json
@@ -27,9 +27,6 @@
 	},
 	"dependencies": {
 		"aes256": "^1.1.0",
-		"dotenv": "^16.3.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"sqlite3": "^5.1.6"
+		"dotenv": "^16.3.1"
 	}
 }
